kubernetes/prod/app-prod-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        image: localhost:5000/space_launches_api:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: kaggle-config
          mountPath: /root/.kaggle
          readOnly: true
      volumes:
      - name: kaggle-config
        secret:
          secretName: kaggle-secret
